<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editTexPersonName"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/editTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_identification" />

            <EditText
                android:id="@+id/editTextPersonName3"
                android:layout_width="wrap_content"
                android:layout_height="66dp"
                android:ems="10"
                android:inputType="number|textPersonName"
                android:minHeight="48dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button3"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:onClick="enviarnewactividad"
                android:text="@string/second_tab"
                tools:ignore="VisualLintBounds" />

        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/dimensionletra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radioButtonnormal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/radioButtonnormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/normal" />

            <RadioButton
                android:id="@+id/radioButtonmediano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/medium" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_the_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dimensionletra"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="4"
        app:rowCount="2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            app:columnCount="0"
            app:rowCount="0" />


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swim"
            app:columnCount="1"
            app:rowCount="0" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soccer"
            app:columnCount="2"
            app:rowCount="0" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/games"
            app:columnCount="3"
            app:rowCount="0" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dance"
            app:columnCount="1"
            app:rowCount="1" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sing"
            app:columnCount="2"
            app:rowCount="1" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"
            app:columnCount="3"
            app:rowCount="1" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="accionarBoton"
        android:text="@string/enlarge" />

    <Button
        android:id="@+id/button2"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:text="@string/color" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/disable_color"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


</LinearLayout>